# ai_search

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
crates/: crate_coding.md
crates/ai_populate/: ARCHITECTURE.md  Cargo.toml
crates/ai_vec_hybrid/: Cargo.toml  facts.json
crates/future_quantum_ai/: Cargo.toml  explain_concept.md  proposal.md  structural.md
crates/moe/: Cargo.toml  experts.json  router_config.json
crates/moe_system/: Cargo.toml  asci_pipeline.md  base.md  base_models.md  experts.md  orchestrator.md  router.md  shared.md  (+1 more)
crates/mycelium/: Cargo.toml
crates/mycelium/src/: agent.rs  context.rs  main.rs
crates/mycelium/src/roles/: PATTERNS.md  mod.rs  role_behavior_trait.rs  role_enum_to_action_call.rs  role_selector.rs  roles.rs  spokesperson.rs  synthesizer.rs
crates/mycelium/src/roles/analysis_quality/: analysis_quality.rs  analysis_quality_synth.rs  analysis_quality_to_action_call.rs  mod.rs
crates/mycelium/src/roles/quality_judge/: mod.rs  quality_judge.rs  quality_judge_empty_check.rs  quality_judge_result.rs  quality_judge_to_action_call.rs
crates/mycelium/src/roles/reviewer/: mod.rs  reviewer.rs
crates/mycelium/src/roles/validator/: validator.rs
crates/quantum_ai_futur/: Cargo.toml  EXPERIMENTS.md  README.md
crates/quantum_ai_futur/src/: lib.rs  main.rs  maths.rs  model.rs  print.rs
crates/quantum_ai_futur/src/data_generators/: agnews_loader.rs  audio.rs  cifar_loader.rs  codegen.rs  composite.rs  data_generator.rs  graph.rs  maths.rs  mnist_loader.rs  mod.rs  nlp.rs  tabular.rs
(+150 files in other folders)
