[package]
name = "mycelium"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
atty = "0.2"
uuid = { version = "1", features = ["v7", "serde"] }
bitflags = { version = "2", features = ["serde"] }
rayon = "1.8"

[dev-dependencies]
rand = "0.8"