[package]
name = "quantum_ai_futur"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
flate2 = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
tar = "0.4"
burn = { version = "0.18", features = ["ndarray", "train", "wgpu", "tch"] }
burn-tch = "0.18"
bincode = "2.0.0"

[dev-dependencies]
rand = "0.8"
assert_cmd = "2.0"
predicates = "2.1"